[tool.poetry]
name = "path-query"
version = "0.1.0"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pyvis = "*"
networkx = "*"
rdflib = "*"
pyxattr = {path = "/Users/dave/build/pyxattr/"}
nifstd-tools = {path = "/Users/dave/build/pyontutils/nifstd/", develop = true}
pyontutils = {path = "/Users/dave/build/pyontutils/", develop = true}
