[tool.poetry]
name = "path-query"
version = "0.1.0"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pyvis = "*"
networkx = "*"
rdflib = "*"
matplotlib = "^3.4.3"
scipy = {version = "^1.7.1", python = ">=3.8,<3.10"}
ipycytoscape = "^1.2.2"
ipympl = "^0.8.2"
ipycanvas = "^0.9.1"
orjson = "^3.6.4"
